'Fixed post title of Post#3 in home page'

--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -38,7 +38,7 @@
     <ul class="post-list"><li><span class="post-meta">Feb 2, 2020</span>
         <h3>
           <a class="post-link" href="/compute/Variables-in-C">
-            Not all variables are same (in C)
+            Not all variables are the same (in C)
           </a>
         </h3></li><li><span class="post-meta">Jan 31, 2020</span>
         <h3>
