--- a/_layouts/start.html
+++ b/_layouts/start.html
@@ -35,22 +35,16 @@
       <div class="wrapper">
         <div class="home">
 <h2 class="post-list-heading">Posts</h2>
-    <ul class="post-list"><li><span class="post-meta">Feb 2, 2020</span>
-        <h3>
-          <a class="post-link" href="/compute/Variables-in-C">
-            Not all variables are the same (in C)
-          </a>
-        </h3></li><li><span class="post-meta">Jan 31, 2020</span>
-        <h3>
-          <a class="post-link" href="/compute/2020/01/31/how-to-install-jekyll-copy.html">
-            How to install Jekyll on Windows
-          </a>
-        </h3></li><li><span class="post-meta">Jan 26, 2020</span>
-        <h3>
-          <a class="post-link" href="/compute/2020/01/26/welcome-to-jekyll.html">
-            Dr. Jekyll &amp; Mr. Hyde
-          </a>
-        </h3></li></ul>
+<ul class="post-list">
+  {% for post in site.posts %}
+    <li>
+      <span class="post-meta">{{ post.date }}</span>
+      <h3>
+          <a class="post-link" href="/compute{{ post.url }}">{{ post.title }}</a>
+      </h3>
+    </li>
+  {% endfor %}
+</ul>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/compute/"></data>
